# file-sharer-tcp

./: Cargo.toml  README.md
src/: main.rs
static/: 404.html  index.html
